templates/node-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: app 
  labels:
    app: app 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app 
  template:
    metadata:
      labels:
        app: app 
    spec:
      containers:
        - name: app
          image: nginx:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m 
              memory: 128Mi 
            limits:
              cpu: 500m 
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000 
            initialDelaySeconds: 5 
            periodSeconds: 10 
          livenessProbe:
            httpGet:
              path: /
              port: 3000 
            initialDelaySeconds: 15
            periodSeconds: 20
