templates/node-api/base/service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: app 
spec:
  selector:
    app: app 
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
