templates/node-api/base/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - example.host 
      secretName: app-tls
  rules:
    - host: example.host 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app 
                port:
                  number: 80
